<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, startingUI!</string>
    <string name="app_name">Fishing Database</string>
    <string name="fish_species">Fish Species: </string>
    <string name="fish_length">Fish Length: </string>
    <string name="fish_weight">Fish Weight: </string>
    <string name="fish_length_units_inches">inches</string>
    <string name="fish_length_units_centimeters">cm.</string>
    <string name="fish_weight_units_lbs">lbs.</string>
    <string name="fish_weight_units_kg">kg.</string>
    <string name="lure_type">Lure Type: </string>
    <string name="lure_color">Lure Color: </string>
    <string name="empty"></string>
    <string name="fish_depth">Depth: </string>
    <string name="fish_depth_units_feet">feet</string>
    <string name="fish_depth_units_meters">meters</string>
    <string name="save">Save</string>
    <string name="water_temp">Water Temp: </string>
    <string name="water_temp_units_f">deg. F</string>
    <string name="water_temp_units_c">deg. C</string>
    <string name="temp">Temp: </string>
    <string name="conditions">Conditions: </string>
    <string name="humidity">Humidity: </string>
    <string name="wind">Wind: </string>
    <string name="barPressure">Bar. Pressure: </string>
    <string name="dewPt">Dew Point: </string>
    <string name="cancel">Cancel</string>
    <string name="menu_add_lure">Add Lure</string>
    <string name="addlure_luretype">Lure Type (E.g. Buzzbait, Jig, Crankbait, etc.) :</string>
    <string name="main_screen_addlure">Add a Lure</string>
    <string name="menu_add_lurecolor">Add Lure Color</string>
    <string name="menu_add_species">Add Species</string>
    <string name="add_fish">Add Fish</string>
    <string name="lake_name">Lake Name:</string>
    <string name="addlake_name">Lake Name: </string>
    <string name="menu_addlake">Add Lake</string>
    <string name="main_list_header_primary_actions">Primary Actions</string>
    <string name="main_list_header_secondary_actions">Secondary Actions</string>
    <string name="main_list_header_misc_actions">Miscellaneous Actions</string>
    <string name="date_time">Date / Time: </string>
    <string name="lure">Lure: </string>
    <string name="outside_temp">Outside Temp: </string>
    <string name="menu_view_on_map">View on Map</string>
    <string name="pref_clear_database">Clear Database</string>
    <string name="pref_summary_clear_database">This will clear the database of all fish, lures, lakes, species, etc.</string>
    <string name="settings">Settings</string>
    <string name="app_preferences_name">Preferences</string>
    <string name="menu_view_last_50_on_map">View on map</string>
    <string name="menu_delete_fish">Remove Fish</string>
    <string name="menu_edit_fish">Edit Fish</string>
</resources>
