<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="match_parent" android:layout_width="match_parent" android:orientation="vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fish_species" android:id="@+id/textView1"></TextView>
        <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:prompt="@string/fish_species" android:id="@+id/spinner_fishspecies"></Spinner>
        <TextView android:layout_width="wrap_content" android:text="@string/lake_name" android:id="@+id/textView8" android:layout_height="wrap_content"></TextView>
        <Spinner android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/spinner_lakename"></Spinner>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fish_length" android:id="@+id/textView2"></TextView>
        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout1">
            <TableRow android:id="@+id/tableRow1" android:baselineAligned="false" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/empty" android:layout_weight="1" android:inputType="numberDecimal" android:id="@+id/fish_length"></EditText>
                <Button android:layout_height="wrap_content" android:id="@+id/fish_length_units" android:layout_width="wrap_content" android:layout_weight="0" android:text="@string/fish_length_units_inches"></Button>
            </TableRow>
        </TableLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fish_weight" android:id="@+id/textView3"></TextView>
        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout2">
            <TableRow android:id="@+id/tableRow2" android:baselineAligned="false" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/empty" android:layout_weight="1" android:inputType="numberDecimal" android:id="@+id/fish_weight"></EditText>
                <Button android:layout_height="wrap_content" android:id="@+id/fish_weight_units" android:layout_width="wrap_content" android:text="@string/fish_weight_units_lbs"></Button>
            </TableRow>
        </TableLayout>
        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout3">
            <TableRow android:layout_weight="1" android:id="@+id/tableRow3" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <TextView android:layout_height="wrap_content" android:text="@string/lure_type" android:layout_width="wrap_content" android:layout_weight="2" android:id="@+id/textView4"></TextView>
                <TextView android:layout_height="wrap_content" android:text="@string/lure_color" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/textView5"></TextView>
            </TableRow>
            <TableRow android:layout_weight="1" android:id="@+id/tableRow4" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="2" android:id="@+id/spinner_lure_type"></Spinner>
                <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/spinner_lure_color"></Spinner>
            </TableRow>
        </TableLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fish_depth" android:id="@+id/textView6"></TextView>
        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout4">
            <TableRow android:id="@+id/tableRow5" android:baselineAligned="false" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/empty" android:layout_weight="1" android:inputType="numberDecimal" android:id="@+id/fish_depth"></EditText>
                <Button android:layout_height="wrap_content" android:id="@+id/fish_depth_units" android:layout_width="wrap_content" android:text="@string/fish_depth_units_feet"></Button>
            </TableRow>
        </TableLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/water_temp" android:id="@+id/textView7"></TextView>
        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/tableLayout5">
            <TableRow android:id="@+id/tableRow6" android:baselineAligned="false" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/empty" android:layout_weight="1" android:id="@+id/water_temp" android:inputType="numberDecimal"></EditText>
                <Button android:layout_height="wrap_content" android:id="@+id/water_temp_units" android:layout_width="wrap_content" android:text="@string/water_temp_units_f"></Button>
            </TableRow>
        </TableLayout>
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="10dp">
            <Button android:id="@+id/save_fish_button" android:layout_height="wrap_content" android:text="@string/save" android:layout_width="wrap_content" android:layout_weight="1"></Button>
            <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/cancel" android:id="@+id/cancel_add_fish_button"></Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
