<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <TextView android:layout_width="wrap_content" android:text="@string/addlake_name" android:id="@+id/textView1" android:layout_height="wrap_content"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/empty" android:id="@+id/addlake_name"></EditText>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
        <Button android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/save" android:id="@+id/addlake_save_button"></Button>
        <Button android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/cancel" android:id="@+id/addlake_cancel_button"></Button>
    </LinearLayout>
</LinearLayout>
