<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="match_parent" android:layout_width="match_parent">
        <TableLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:id="@+id/tableLayout1" android:layout_weight="1">
            <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:baselineAligned="true">
                <LinearLayout android:layout_weight="1" android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:layout_gravity="left" android:text="@string/temp" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_weight="0" android:layout_width="wrap_content"></TextView>
                    <TextView android:layout_gravity="left" android:text="@string/empty" android:layout_height="wrap_content" android:gravity="left" android:id="@+id/tempTV" android:layout_weight="1" android:layout_width="match_parent" android:layout_marginLeft="3dp"></TextView>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView android:text="@string/conditions" android:layout_height="wrap_content" android:gravity="right" android:id="@+id/textView2" android:layout_weight="0" android:layout_width="wrap_content"></TextView>
                    <TextView android:layout_gravity="center" android:text="@string/empty" android:layout_height="wrap_content" android:id="@+id/conditionsTV" android:layout_weight="1" android:layout_width="wrap_content" android:layout_marginLeft="3dp"></TextView>
                </LinearLayout>
            </TableRow>
            <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
                <LinearLayout android:layout_weight="1" android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:layout_gravity="right" android:text="@string/humidity" android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="0" android:layout_width="wrap_content"></TextView>
                    <TextView android:layout_gravity="left" android:text="@string/empty" android:layout_height="wrap_content" android:id="@+id/humidityTV" android:layout_weight="1" android:layout_width="wrap_content" android:layout_marginLeft="3dp"></TextView>
                </LinearLayout>
                <LinearLayout android:layout_weight="1" android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:text="@string/wind" android:layout_height="wrap_content" android:gravity="right" android:id="@+id/textView5" android:layout_weight="0" android:layout_width="wrap_content"></TextView>
                    <TextView android:layout_gravity="right" android:text="@string/empty" android:layout_height="wrap_content" android:id="@+id/windSpeedTV" android:layout_weight="0" android:layout_width="wrap_content" android:layout_marginLeft="3dp"></TextView>
                    <TextView android:layout_gravity="left" android:text="@string/empty" android:layout_height="wrap_content" android:id="@+id/windDirTV" android:layout_weight="1" android:layout_width="wrap_content" android:layout_marginLeft="3dp"></TextView>
                </LinearLayout>
            </TableRow>
            <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow3" android:layout_marginTop="10dp" android:layout_height="wrap_content">
                <LinearLayout android:layout_weight="1" android:id="@+id/linearLayout6" android:layout_height="wrap_content" android:layout_width="wrap_content">
                    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="@string/barPressure"></TextView>
                    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/barPressureTV" android:text="@string/empty" android:layout_weight="1" android:layout_marginLeft="3dp"></TextView>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearLayout7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
                    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView7" android:text="@string/dewPt"></TextView>
                    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/dewPtTV" android:text="@string/empty" android:layout_weight="1" android:layout_marginLeft="3dp"></TextView>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
